minor fixes fix merge after squash main into current

--- a/calm-webserver/resources/css/app.css
+++ b/calm-webserver/resources/css/app.css
@@ -34,12 +34,12 @@
         @apply text-white bg-vividTangerine hover:bg-manhattan focus-visible:outline-vividTangerine;
     }
 
+    .btn-less-forte{
+        @apply text-white bg-manhattan hover:bg-vividTangerine focus-visible:outline-manhattan;
+    }
+
     .input {
         @apply border-2 rounded-lg p-1.5 sm:text-sm sm:leading-6 text-gray-900 shadow-sm placeholder:text-gray-400;
-    }
-    
-    .input > label {
-        @apply self-center;
     }
 
     .input > label {
@@ -58,8 +58,6 @@
     }
 
     .icons {
-        @apply text-2xl px-2;
-
         font-family: 'Material Symbols Rounded';
         font-weight: normal;
         font-style: normal;
@@ -78,24 +76,18 @@
         /* Support for Firefox. */
         -moz-osx-font-smoothing: grayscale;
 
-            /* Support for IE. */
-            font-feature-settings: 'liga';
+        /* Support for IE. */
+        font-feature-settings: 'liga';
     }
 
     .icons-sobre {
-        @apply text-rollingStone;
+        @apply text-rollingStone text-2xl px-2;
     }
 
     .icons-forte {
-        @apply text-rollingStone;
+        @apply text-vividTangerine text-2xl px-2;
     }
-    }
-
-    .icons-sobre {
-        @apply text-rollingStone;
-    }
-
-    .icons-forte {
-        @apply text-rollingStone;
+    .icons-less-forte{
+        @apply text-manhattan text-2xl px-2;
     }
 }
